--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <img src="./pfp.jpg" alt="Profile Picture" width="120px">
     <h1>MUHAMMAD ALI</h1>
     <hr>
     <h3>Junior Software Developer</h3>
