--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Practice</title>
+    <style>
+        body {
+            background-color: #ddd8ce;
+        }
+    </style>
 </head>
 
 <body>
